[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Element/Accelerator/Accelerator.gd" type="Script" id=1]
[ext_resource path="res://Asset/Pic/Element/element_accelerator.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Accelerator" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -70.9169, -17.3089, -77.1532, -4.39088, -76.7077, 8.0817, -69.5805, 19.6634, -11.6721, 85.5899, -1.87224, 89.1535, 9.26399, 88.2626, 69.8451, 20.1088, 77.4178, -0.381836, 73.4087, -13.7453, 11.9367, -87.6899, -0.535889, -93.9262, -11.2267, -86.799 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/out = SubResource( 1 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
